--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
